# widetom

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  run.sh
src/: commands.rs  general.rs  lib.rs  main.rs
