[package]
name = "widertom"
version = "0.1.0"
authors = ["Nilstrieb <niltrieb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uwuify = "^0.2"
async-trait = "0.1.50"
lazy_static = "1.4.0"
toml = "0.5.8"
fancy-regex = "0.5.0"
rand = "0.8.3"

[dependencies.serenity]
version = "0.10.7"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache", "http", "utils"]
