[package]
name = "widertom"
version = "0.1.0"
authors = ["Nilstrieb <niltrieb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uwuify = "^0.2"
async-trait = "0.1.50"
lazy_static = "1.4.0"
toml = "0.9.8"
fancy-regex = "0.16.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache", "http", "utils"]
